--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,6 @@ jobs:
         
       - name: List current directory contents
         run: ls -la
+        
+      - name: Run SH script
+        run: script.sh
